--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,37 @@
-name: pwi
+name: demo
 
 services:
-  app:
+  reverse-proxy:
+    image: traefik:v3.1
+    command:
+      - '--api.insecure=true'
+      - '--providers.docker'
+      - '--providers.docker.exposedbydefault=false'
+      - '--entryPoints.websecure.address=:443'
+      - '--certificatesresolvers.myresolver.acme.tlschallenge=true'
+      - '--certificatesresolvers.myresolver.acme.email=alec@poetry.software'
+      - '--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json'
+      - '--entrypoints.web.address=:80'
+      - '--entrypoints.web.http.redirections.entrypoint.to=websecure'
+      - '--entrypoints.web.http.redirections.entrypoint.scheme=https'
+    ports:
+      - '80:80'
+      - '443:443'
+      - '8080:8080'
+    volumes:
+      - letsencrypt:/letsencrypt
+      - /var/run/docker.sock:/var/run/docker.sock
+  pwi:
     build:
       context: .
       dockerfile: Dockerfile
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi`)'
+      - 'traefik.http.routers.pwi.entrypoints=websecure'
+      - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
+      - 'traefik.http.middlewares.pwi-stripprefix.stripprefix.prefixes=/pwi'
+      - 'traefik.http.routers.pwi.middlewares=pwi-stripprefix'
     volumes:
       - type: bind
         source: ./.env
@@ -20,8 +47,6 @@ services:
       - pwi
     depends_on:
       - typesense
-    ports:
-      - '8000:8000'
 
   typesense:
     image: 'typesense/typesense:29.0'
@@ -49,5 +74,6 @@ networks:
     driver: bridge
 
 volumes:
+  letsencrypt:
   typesense:
     driver: local
