--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,9 @@ services:
       dockerfile: Dockerfile
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi`)'
+      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`)'
       - 'traefik.http.routers.pwi.entrypoints=websecure'
       - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
-      - 'traefik.http.middlewares.pwi-stripprefix.stripprefix.prefixes=/pwi'
-      - 'traefik.http.routers.pwi.middlewares=pwi-stripprefix'
     volumes:
       - type: bind
         source: ./.env
