--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`)'
       - 'traefik.http.routers.pwi.entrypoints=websecure'
       - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
+      - 'traefik.http.services.pwi.loadbalancer.server.port=8000'
     volumes:
       - type: bind
         source: ./.env
