--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,10 @@ services:
       - pwi
     depends_on:
       - typesense
+    environment:
+      - APP_URL=https://demo.poetry.software/pwi
+      - TRUSTED_PROXIES=*
+      - FORCE_HTTPS=true
 
   typesense:
     image: 'typesense/typesense:29.0'
