Remove Path-Based Routing
Removes the attempted path-based routing. Laravel just isn't set up for this kind of pattern.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       dockerfile: Dockerfile
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi`)'
+      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`)'
       - 'traefik.http.routers.pwi.entrypoints=websecure'
       - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
       - 'traefik.http.services.pwi.loadbalancer.server.port=8000'
@@ -51,8 +51,6 @@ services:
       - typesense
     environment:
       - APP_ENV=production
-      - APP_URL=https://demo.poetry.software/pwi
-      - ASSET_URL=/pwi
 
   typesense:
     image: 'typesense/typesense:29.0'
