--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,17 @@ services:
       dockerfile: Dockerfile
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.pwi.rule=Host(`pwi.demo.poetry.software`)'
+      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi/`)'
       - 'traefik.http.routers.pwi.entrypoints=websecure'
       - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
+      - 'traefik.http.routers.pwi.middlewares=pwi-stripprefix,pwi-hostrewrite'
       - 'traefik.http.services.pwi.loadbalancer.server.port=8000'
+      - 'traefik.http.middlewares.pwi-stripprefix.stripprefix.prefixes=/pwi'
+      - 'traefik.http.middlewares.pwi-hostrewrite.headers.customrequestheaders.Host=pwi.demo.poetry.software'
+      - 'traefik.http.routers.pwi-direct.rule=Host(`pwi.demo.poetry.software`)'
+      - 'traefik.http.routers.pwi-direct.entrypoints=websecure'
+      - 'traefik.http.routers.pwi-direct.tls.certresolver=myresolver'
+      - 'traefik.http.routers.pwi-direct.service=pwi'
     volumes:
       - type: bind
         source: ./.env
