--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,11 @@ services:
       - 'traefik.http.services.pwi.loadbalancer.server.port=8000'
       - 'traefik.http.middlewares.pwi-stripprefix.stripprefix.prefixes=/pwi'
       - 'traefik.http.middlewares.pwi-hostrewrite.headers.customrequestheaders.Host=pwi.demo.poetry.software'
+      - 'traefik.http.middlewares.cors.headers.accesscontrolalloworiginlist=https://demo.poetry.software'
+      - 'traefik.http.middlewares.cors.headers.accesscontrolallowmethods=GET,POST,PUT,DELETE,OPTIONS'
+      - 'traefik.http.middlewares.cors.headers.accesscontrolallowheaders=*'
+      - 'traefik.http.middlewares.cors.headers.accesscontrolallowcredentials=true'
+      - 'traefik.http.routers.pwi-direct.middlewares=cors'
       - 'traefik.http.routers.pwi-direct.rule=Host(`pwi.demo.poetry.software`)'
       - 'traefik.http.routers.pwi-direct.entrypoints=websecure'
       - 'traefik.http.routers.pwi-direct.tls.certresolver=myresolver'
