Test new wildcard configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - '--entrypoints.web.address=:80'
       - '--entrypoints.web.http.redirections.entrypoint.to=websecure'
       - '--entrypoints.web.http.redirections.entrypoint.scheme=https'
+
     ports:
       - '80:80'
       - '443:443'
@@ -30,22 +31,22 @@ services:
       dockerfile: Dockerfile
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.pwi.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi/`)'
+      - 'traefik.http.routers.pwi.rule=Host(`pwi-demo.poetry.software`)'
+      - 'traefik.http.routers.pwi-redirect.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi/`)'
+      - 'traefik.http.routers.pwi-redirect.entrypoints=websecure'
+      - 'traefik.http.routers.pwi-redirect.tls.certresolver=myresolver'
+      - 'traefik.http.routers.pwi-redirect.middlewares=pwi-redirect'
+      - 'traefik.http.middlewares.pwi-redirect.redirectregex.regex=^https://demo.poetry.software/pwi/(.*)'
+      - 'traefik.http.middlewares.pwi-redirect.redirectregex.replacement=https://pwi-demo.poetry.software/$${1}'
       - 'traefik.http.routers.pwi.entrypoints=websecure'
       - 'traefik.http.routers.pwi.tls.certresolver=myresolver'
-      - 'traefik.http.routers.pwi.middlewares=pwi-stripprefix,pwi-hostrewrite'
       - 'traefik.http.services.pwi.loadbalancer.server.port=8000'
-      - 'traefik.http.middlewares.pwi-stripprefix.stripprefix.prefixes=/pwi'
-      - 'traefik.http.middlewares.pwi-hostrewrite.headers.customrequestheaders.Host=pwi.demo.poetry.software'
-      - 'traefik.http.middlewares.cors.headers.accesscontrolalloworiginlist=https://demo.poetry.software'
-      - 'traefik.http.middlewares.cors.headers.accesscontrolallowmethods=GET,POST,PUT,DELETE,OPTIONS'
-      - 'traefik.http.middlewares.cors.headers.accesscontrolallowheaders=*'
-      - 'traefik.http.middlewares.cors.headers.accesscontrolallowcredentials=true'
-      - 'traefik.http.routers.pwi-direct.middlewares=cors'
-      - 'traefik.http.routers.pwi-direct.rule=Host(`pwi.demo.poetry.software`)'
-      - 'traefik.http.routers.pwi-direct.entrypoints=websecure'
-      - 'traefik.http.routers.pwi-direct.tls.certresolver=myresolver'
-      - 'traefik.http.routers.pwi-direct.service=pwi'
+      - 'traefik.http.routers.pwi-redirect.rule=Host(`demo.poetry.software`) && PathPrefix(`/pwi/`)'
+      - 'traefik.http.routers.pwi-redirect.entrypoints=websecure'
+      - 'traefik.http.routers.pwi-redirect.tls.certresolver=myresolver'
+      - 'traefik.http.routers.pwi-redirect.middlewares=pwi-redirect'
+      - 'traefik.http.middlewares.pwi-redirect.redirectregex.regex=^https://demo.poetry.software/pwi/(.*)'
+      - 'traefik.http.middlewares.pwi-redirect.redirectregex.replacement=https://pwi-demo.poetry.software/$${1}'
     volumes:
       - type: bind
         source: ./.env
